MMA-9932 fixes per pr review
